WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213480
dlopen() always fails on arm64, cannot load soft-linked libraries
https://bugs.webkit.org/show_bug.cgi?id=213480
Summary
dlopen() always fails on arm64, cannot load soft-linked libraries
Tim Horton
Reported
2020-06-22 12:42:27 PDT
dlopen() always fails on arm64, cannot load soft-linked libraries
Attachments
Patch
(2.75 KB, patch)
2020-06-22 12:43 PDT
,
Tim Horton
thorton
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-06-22 12:43:02 PDT
Created
attachment 402498
[details]
Patch
EWS
Comment 2
2020-06-22 13:46:57 PDT
commit-queue failed to commit
attachment 402498
[details]
to WebKit repository.
Tim Horton
Comment 3
2020-06-22 14:24:51 PDT
https://trac.webkit.org/changeset/263366/webkit
Radar WebKit Bug Importer
Comment 4
2020-06-22 14:25:18 PDT
<
rdar://problem/64608460
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug