dlopen() always fails on arm64, cannot load soft-linked libraries https://bugs.webkit.org/show_bug.cgi?id=213480

Reviewed by Alexey Proskuryakov and Per Arne Vollan.

* Shared/mac/AuxiliaryProcessMac.mm:
(WebKit::initializeSandboxParameters):
Expose the auxiliary process' CPU family as a parameter to the sandbox profile,
so that it can be used to predicate sandbox expressions.

* WebProcess/com.apple.WebProcess.sb.in:
Allow mremap_encrypted from the Web Content process, because the arm64 dlopen() needs it.


Canonical link: https://commits.webkit.org/226272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263366 268f45cc-cd09-0410-ab3c-d52691b4dbfc